--- a/src/content/config/navigation.mdx
+++ b/src/content/config/navigation.mdx
@@ -4,6 +4,8 @@ main_menu:
     href: /
   - label: Produtos
     href: /products
+  - label: O Squad
+    href: /squad
   - label: Servicos
     href: /services
   - label: Sobre
@@ -30,6 +32,8 @@ footer_menus:
     links:
       - label: Sobre Nos
         href: /about
+      - label: O Squad
+        href: /squad
       - label: Servicos
         href: /services
       - label: Suporte
