--- a/src/content/config/pt/navigation.mdx
+++ b/src/content/config/pt/navigation.mdx
@@ -4,6 +4,8 @@ main_menu:
     href: /pt/
   - label: Produtos
     href: /pt/products/
+  - label: O Squad
+    href: /pt/squad/
   - label: Serviços
     href: /pt/services/
   - label: Sobre
@@ -30,6 +32,8 @@ footer_menus:
     links:
       - label: Sobre
         href: /pt/about/
+      - label: O Squad
+        href: /pt/squad/
       - label: Serviços
         href: /pt/services/
       - label: Suporte
