--- a/src/content/config/navigation.mdx
+++ b/src/content/config/navigation.mdx
@@ -14,20 +14,18 @@ main_menu:
     href: /support
 cta_menu:
   - label: Kit Gratuito
-    href: /products/streamer-kit-free
+    href: /products/kit-demo
 footer_menus:
   - label: Produtos
     links:
       - label: Todos os Kits
         href: /products
-      - label: Kit Gratuito
-        href: /products/streamer-kit-free
-      - label: Kit Basic
-        href: /products/streamer-kit-basic
-      - label: Kit Intermediate
-        href: /products/streamer-kit-intermediate
-      - label: Kit Advanced
-        href: /products/streamer-kit-advanced
+      - label: Adventury Starter Pack
+        href: /products/kit-demo
+      - label: Adventury Creator Pack
+        href: /products/kit-basic
+      - label: Kit Personalizado
+        href: /products/kit-custom
   - label: Empresa
     links:
       - label: Sobre Nos
