--- a/src/content/config/pt/navigation.mdx
+++ b/src/content/config/pt/navigation.mdx
@@ -20,14 +20,12 @@ footer_menus:
     links:
       - label: Todos os Kits
         href: /pt/products/
-      - label: Kit Gratuito
+      - label: Adventury Starter Pack
         href: /pt/products/kit-demo/
-      - label: Kit Básico
+      - label: Adventury Creator Pack
         href: /pt/products/kit-basic/
-      - label: Kit Intermediário
-        href: /pt/products/kit-intermediate/
-      - label: Kit Avançado
-        href: /pt/products/kit-advanced/
+      - label: Kit Personalizado
+        href: /pt/products/kit-custom/
   - label: Empresa
     links:
       - label: Sobre
