--- a/src/content/page/pt/index.mdx
+++ b/src/content/page/pt/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Adventury Gaming - Kits Profissionais para Streamers
-description: Kits profissionais para streamers. Overlays, alertas, paineis e transicoes desenvolvidos por designers especializados para suas transmissoes.
+description: Kits profissionais para streamers. Starter Pack gratuito, Creator Pack personalizado e kit sob demanda para elevar suas transmissoes.
 intro: Transforme sua stream em producao profissional
 style:
   hero_template: image
@@ -23,7 +23,7 @@ hero:
   title: |
     Transforme sua stream em **produção profissional**
   intro: >
-    Kits completos de overlays, alertas e painéis desenvolvidos por designers especializados. Do gratuito ao avançado, encontre o kit perfeito para elevar suas transmissões.
+    Kits completos de overlays e telas desenvolvidos por designers especializados. Do Starter Pack gratuito ao Creator Pack e opcoes sob demanda.
 
   buttons:
     - icon_only: false
@@ -32,7 +32,7 @@ hero:
       className: btn-primary btn-lg
     - icon_only: false
       label: Kit Gratuito
-      href: "/products/streamer-kit-free"
+      href: "/products/kit-demo"
       className: btn-primary btn-lg
 blocks:
   - type: features
@@ -77,64 +77,45 @@ blocks:
     content: |
       Do streamer iniciante ao profissional estabelecido, temos opcoes para todos os niveis.
     prices:
-      - title: Free
+      - title: Adventury Starter Pack
         intro: Para quem esta comecando
         price: "Gratis"
         surface: surface-dark
         features:
-          - label: 4 overlays basicos
-          - label: 2 alertas
-          - label: Telas de inicio/pausa/fim
-          - label: Guia de instalacao
+          - label: 3 telas essenciais
+          - label: Pronto para OBS
+          - label: Facil de instalar
+          - label: Ideal para iniciantes
         buttons:
-          - label: Download Gratuito
-            href: /products/streamer-kit-free
+          - label: Baixar Starter Pack
+            href: /products/kit-demo
             className: btn-secondary
-      - title: Basic
-        intro: Para quem quer se destacar
-        price: "R$ 49,90"
+      - title: Adventury Creator Pack
+        intro: Para quem quer evoluir
+        price: "R$ 24,90"
         surface: surface-dark
         features:
-          - label: 7 overlays completos
-          - label: 5 alertas animados
-          - label: 5 paineis para perfil
-          - label: 2 transicoes
-          - label: 30 dias de suporte
+          - label: 5 telas completas
+          - label: Personalizacao manual
+          - label: Entrega em ate 1 dia util
+          - label: Design profissional
         buttons:
-          - label: Ver Detalhes
-            href: /products/streamer-kit-basic
+          - label: Solicitar Creator Pack
+            href: /products/kit-basic
             className: btn-primary
-      - title: Intermediate
-        intro: Para streamers serios
-        price: "R$ 99,90"
+      - title: Kit Personalizado
+        intro: Projeto sob demanda
+        price: "Sob consulta"
         surface: surface-primary
         features:
-          - label: 10+ overlays avancados
-          - label: 10+ alertas premium
-          - label: 5 widgets interativos
-          - label: 10 paineis + variacoes
-          - label: 4 transicoes
-          - label: 60 dias de suporte
+          - label: Identidade visual exclusiva
+          - label: Telas e elementos sob medida
+          - label: Ajustes finos no processo
+          - label: Entrega alinhada ao seu prazo
         buttons:
-          - label: Mais Vendido
-            href: /products/streamer-kit-intermediate
+          - label: Solicitar orcamento
+            href: /products/kit-custom
             className: btn-primary
-      - title: Advanced
-        intro: Producao de nivel broadcast
-        price: "R$ 199,90"
-        surface: surface-dark
-        features:
-          - label: 20+ overlays premium
-          - label: Sistema completo de alertas
-          - label: 10+ widgets avancados
-          - label: 20 emotes + 10 badges
-          - label: 8 transicoes cinematicas
-          - label: Setup guiado incluso
-          - label: 90 dias suporte VIP
-        buttons:
-          - label: Ver Detalhes
-            href: /products/streamer-kit-advanced
-            className: btn-secondary
 
   - type: richtext
     component: RichText
@@ -157,7 +138,7 @@ blocks:
     items:
       - title: Os kits funcionam com qual software?
         description: >
-          Todos os nossos kits sao compativeis com OBS Studio, Streamlabs, StreamElements, e a maioria dos softwares de streaming.
+          Todos os nossos kits sao compativeis com OBS Studio e as principais plataformas de streaming.
       - title: Preciso de conhecimento tecnico?
         description: >
           Nao! Todos os kits vem com guias de instalacao passo a passo. E se precisar de ajuda, nosso suporte esta disponivel.
@@ -166,7 +147,7 @@ blocks:
           Sim, todos os nossos kits permitem uso comercial. Voce pode usar em streams com doacoes, subs, e publicidade.
       - title: Como recebo o produto apos a compra?
         description: >
-          Apos a confirmacao do pagamento, voce recebe o link de download por email em poucos minutos.
+          No Starter Pack, o download e imediato. No Creator Pack, entregamos personalizado em ate 1 dia util.
       - title: Posso personalizar as cores?
         description: >
           Sim! Todos os kits incluem arquivos fonte editaveis para que voce possa ajustar cores e textos.
@@ -184,12 +165,12 @@ blocks:
       ## Pronto para elevar sua stream?
 
 
-      Comece com nosso kit gratuito ou escolha o pacote ideal para suas necessidades.
+      Comece com o Starter Pack ou evolua para o Creator Pack e kits personalizados.
     buttons:
       - label: Ver Todos os Kits
         href: /products
         className: btn-secondary btn-lg
-      - label: Download Gratuito
-        href: /products/streamer-kit-free
+      - label: Baixar Starter Pack
+        href: /products/kit-demo
         className: btn-outline btn-lg
 ---
