--- a/src/content/products/pt/kit-demo.mdx
+++ b/src/content/products/pt/kit-demo.mdx
@@ -1,8 +1,9 @@
 ---
-name: Streamer Kit Free
-short_description: Kit gratuito para streamers iniciantes. Comece sua jornada com overlays e alertas profissionais.
+name: Adventury Starter Pack
+short_description: O primeiro passo para streamers que querem sair do visual padrao.
 product_level: free
 price_display: "Gratis"
+purchase_mode: download
 currency: BRL
 
 stripe:
@@ -10,42 +11,35 @@ stripe:
   price_id: ""
 
 hero:
-  headline: Comece sua jornada como streamer
-  subheadline: Kit gratuito com tudo que voce precisa para iniciar suas transmissoes com visual profissional.
-  primary_cta_label: Download Gratuito
-  secondary_cta_label: Ver mais kits
+  headline: O primeiro passo para streamar com mais profissionalismo
+  subheadline: Essencial, organizado e pronto para uso no OBS.
+  primary_cta_label: Baixar Starter Pack
+  secondary_cta_label: Ver detalhes
 
 thumbnail: /src/assets/system/placeholder-product.png
 gallery:
   - /src/assets/system/placeholder-product.png
 
 highlights:
-  - Overlay de transmissao completo
-  - Alertas basicos para seguidores e doacoes
-  - Telas de inicio, pausa e fim
-  - Totalmente editavel no OBS ou Streamlabs
-  - Sem marca d'agua
-  - Atualizacoes gratuitas
+  - Design profissional e moderno
+  - Arquivos prontos para OBS
+  - Facil de instalar
+  - Ideal para iniciantes
+  - Sem personalizacao de nome
 
 whats_included:
-  - section: Overlays
+  - section: Telas
     items:
-      - Overlay principal para gameplay
-      - Tela de inicio (Starting Soon)
-      - Tela de pausa (Be Right Back)
-      - Tela de fim (Stream Ending)
-  - section: Alertas
-    items:
-      - Alerta de novo seguidor
-      - Alerta de doacao
+      - Tela de Aguardando
+      - Tela Offline
+      - Tela Stream
   - section: Extras
     items:
-      - Guia de instalacao em PDF
-      - Arquivos fonte editaveis
+      - Arquivos prontos para OBS
+      - Guia rapido de instalacao
 
 compatibility:
   - OBS Studio
-  - Streamlabs
   - Twitch
   - YouTube
   - Kick
@@ -53,43 +47,38 @@ compatibility:
 installation_steps:
   - step: 1
     title: Baixe o kit
-    description: Faca o download do arquivo ZIP e extraia em uma pasta de sua preferencia.
+    description: Faca o download do arquivo ZIP e extraia em uma pasta organizada.
   - step: 2
     title: Importe no OBS
-    description: Abra o OBS e adicione uma nova fonte de midia, selecionando os arquivos do kit.
+    description: Abra o OBS e adicione as cenas do kit.
   - step: 3
-    title: Personalize
-    description: Ajuste cores, textos e posicoes conforme sua preferencia.
-  - step: 4
     title: Comece a transmitir
-    description: Pronto! Sua transmissao ja tem visual profissional.
+    description: Seu visual ja esta pronto para a live.
 
 license_summary: Uso pessoal e comercial permitido. Nao redistribua os arquivos originais.
 
 faq:
-  - question: O kit e realmente gratuito?
-    answer: Sim, o Streamer Kit Free e 100% gratuito, sem custos ocultos ou marca d'agua.
-  - question: Posso usar em transmissoes monetizadas?
-    answer: Sim, voce pode usar o kit em streams com doacoes, subs ou publicidade.
-  - question: Preciso dar creditos?
-    answer: Nao e obrigatorio, mas agradecemos se mencionar a Adventury Gaming.
-  - question: Como faco para editar as cores?
-    answer: Os arquivos fonte permitem edicao completa. Recomendamos usar softwares como Photoshop ou Figma.
+  - question: O Starter Pack e gratuito mesmo?
+    answer: Sim, 100% gratuito e sem marca d'agua.
+  - question: Preciso de experiencia com OBS?
+    answer: Nao, o kit ja vem pronto e simples de importar.
+  - question: Posso usar em streams monetizadas?
+    answer: Sim, o uso comercial e permitido.
 
 seo:
-  title: Streamer Kit Free - Download Gratuito | Adventury Gaming
-  description: Kit gratuito para streamers com overlays, alertas e telas profissionais. Compativel com OBS, Streamlabs, Twitch e YouTube.
+  title: Adventury Starter Pack - Download Gratuito | Adventury Gaming
+  description: Kit gratuito com telas essenciais para streamers iniciantes. Pronto para OBS e facil de instalar.
 
 featured: true
 sort_order: 1
 ---
 
-O **Streamer Kit Free** foi criado para ajudar streamers iniciantes a darem os primeiros passos com visual profissional, sem precisar investir dinheiro.
+O **Adventury Starter Pack** foi criado para criadores que estao comecando e querem sair do visual padrao das plataformas.
 
-## Por que escolher o Kit Free?
+## Por que escolher o Starter Pack?
 
-Sabemos que comecar uma carreira de streaming pode ser desafiador. Por isso, criamos este kit gratuito com elementos essenciais que vao elevar a qualidade das suas transmissoes desde o primeiro dia.
+Ele entrega o essencial para iniciar com visual profissional, sem complicacao e pronto para uso imediato.
 
-## Qualidade profissional, custo zero
+## Primeiros passos com identidade
 
-Mesmo sendo gratuito, o kit foi desenvolvido com os mesmos padroes de qualidade dos nossos produtos pagos. Visual limpo, moderno e totalmente personalizavel.
+Um kit simples, organizado e direto ao ponto para voce testar um visual melhor antes de investir em um pack completo.
